--- a/NIGA/Scrap_Mechanic/templates/helloworld.html
+++ b/NIGA/Scrap_Mechanic/templates/helloworld.html
@@ -14,6 +14,9 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdCFpgzY-dvdB2VVZpPuJd2KMM32gxNBhVEQ&usqp=CAU">
 <h2>главный вопрос КОГДА?</h2>
 <p>Уже 2024 год но известно только то, что обновление будет в этом году.(точную дату они не называют:( )</p>
-<button clas = 'btn' id = 'click'>ночная/дневная версия</button>
+<button class = 'btn' id = 'click'>ночная/дневная версия</button>
+
+<a href="/gg/">камень?</a>
+
 </body>
 </html>
