--- a/NIGA/Scrap_Mechanic/templates/helloworld.html
+++ b/NIGA/Scrap_Mechanic/templates/helloworld.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <title>MARON</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <script src="{% static 'js/skript.js' %}"></script>
-</head>
-<body>
+
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQw4WbpnFEVGN2ByttqQeoZdrsCNWX3lmu6Kw&usqp=CAU">
 <h1>Обсуждаем выход "chapter 2"</h1>
 <p> Глава 2 — это предстоящее крупное обновление Scrap Mechanic, которое выведет игру из раннего доступа в версию 1.0. Дата выпуска этого обновления неизвестна. Предполагалось, что оно выйдет летом-осенью 2023 года, согласно данным местной ветки, но теперь это кажется маловероятным. Единственный срок, указанный разработчиками, который все еще правдоподобен, - это конец 2023 года, когда разработчики заявили, что «мы все еще стремимся к этому году». в девлоге от 23 марта. Недавняя активность в X/Twitter, включая серию из 5 постов подряд, выявила дополнительную информацию об обновлении, возможно, намекая на скорую дату выпуска.</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdCFpgzY-dvdB2VVZpPuJd2KMM32gxNBhVEQ&usqp=CAU">
 <h2>главный вопрос КОГДА?</h2>
-<p>Уже 2024 год но известно только то, что обновление будет в этом году.(точную дату они не называют:( )</p>
+<p>Уже 2024 год но известно только то, что обновление будет в этом году.(точную дату они не называют:(⠀⠀⠀⠀⠀)</p>
 <button class = 'btn' id = 'click'>ночная/дневная версия</button>
+<a href="gg/">камень?</a>
 
-<a href="/gg/">камень?</a>
-
-</body>
-</html>
+{% endblock %}
