--- a/NIGA/Scrap_Mechanic/templates/base.html
+++ b/NIGA/Scrap_Mechanic/templates/base.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div class="w">
     {% load static %}
     <meta charset="UTF-8">
     <title>MARON</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/skript.js' %}"></script>
+    <h1>CYBERPAY</h1>
+    <h1>пополняйте Steam чесным способом без пароля от аккаунта!</h1>
+    <a href="/gg">о нас</a>
+    </div>
 </head>
 <body>
 {% block content %}
