--- a/NIGA/Scrap_Mechanic/templates/base.html
+++ b/NIGA/Scrap_Mechanic/templates/base.html
@@ -9,7 +9,7 @@
     <script src="{% static 'js/skript.js' %}"></script>
     <h1>CYBERPAY</h1>
     <h1>пополняйте Steam чесным способом без пароля от аккаунта!</h1>
-    <a href="/gg">о нас</a>
+    <a href="/gg">O NAS</a>
     </div>
 </head>
 <body>
