--- a/NIGA/Scrap_Mechanic/static/css/styles.css
+++ b/NIGA/Scrap_Mechanic/static/css/styles.css
@@ -19,3 +19,32 @@
 h1 {
     font-family: 'kingslayImport';
 }
+.btn{
+  weidth: 40px;
+  height: 40px;
+  background:#8A2BE2;
+  border-radius:28px;
+  color:#FFE4C4;
+}
+.btn:hover {
+    height: 41px;
+    background-color: #FFE4C4;
+    color: #8A2BE2;
+}
+.one{
+   background: #BC8F8F;
+   color: #F0E68C;
+   width:1180px;
+   height: 350px;
+   box-shadow:2px 5px 10px;
+   text-align: center;
+   align-items:center;
+}
+.otf{
+  text-align: center;
+  position: statik;
+  justify-content: center;
+}
+body{
+background:#4a4a4a;
+}
