--- a/NIGA/Scrap_Mechanic/templates/base.html
+++ b/NIGA/Scrap_Mechanic/templates/base.html
@@ -7,13 +7,29 @@
     <title>MARON</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/skript.js' %}"></script>
-    <h1>CYBERPAY</h1>
-    <h1>пополняйте Steam чесным способом без пароля от аккаунта!</h1>
-    <a href="/gg">O NAS</a>
+    <h1 style="font-size: 500%;">CYBERPAY</h1>
+    <h1></h1>
+    <a href="/gg" style="color: white;
+                  font-family: 'Concrete-Regular';
+                  margin: 2%;
+                  text-decoration: none;}">О НАС</a>
+     <a href="/" style="color: white;
+                 font-family: 'Concrete-Regular';
+                 margin: 2%;
+                 text-decoration: none;}">ДОМОЙ</a>
     </div>
 </head>
 <body>
 {% block content %}
 {% endblock %}
 </body>
+<footer>
+    <p style="font-size: 150%;color:#ff944d ">наши медиа:</p>
+
+
+    <p style="font-size: 150%;color:#ff944d ">наши партнёры:</p>
+    <p>БУЛЬКЕРЫ корп.</p>
+    <p>ПИКУЛЯРИКИ тм</p>
+
+</footer>
 </html>
