--- a/NIGA/Scrap_Mechanic/templates/rock.html
+++ b/NIGA/Scrap_Mechanic/templates/rock.html
@@ -2,5 +2,5 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-<p style="font-size: 150%;color:#ff944d ">Мы - команда опытных разработчиков, специализирующихся на создании удобного и надежного сервиса для пополнения счета в Steam. Наша цель - облегчить процесс пополнения счета пользователя, предоставив быструю и безопасную услугу. Мы постоянно работаем над улучшением нашего сервиса, чтобы пользователи могли получить максимальное удовольствие от использования нашего сайта. Мы гордимся своей работой и стремимся делать процесс пополнения счета на Steam максимально удобным и простым для всех наших пользователей.</p>
+<p style="font-size: 150%;color:#a2ff00 ">Мы - команда опытных разработчиков, специализирующихся на создании удобного и надежного сервиса для пополнения счета в Steam. Наша цель - облегчить процесс пополнения счета пользователя, предоставив быструю и безопасную услугу. Мы постоянно работаем над улучшением нашего сервиса, чтобы пользователи могли получить максимальное удовольствие от использования нашего сайта. Мы гордимся своей работой и стремимся делать процесс пополнения счета на Steam максимально удобным и простым для всех наших пользователей.</p>
 {% endblock %}
