--- a/NIGA/Scrap_Mechanic/static/css/styles.css
+++ b/NIGA/Scrap_Mechanic/static/css/styles.css
@@ -17,7 +17,7 @@
     height: 200px;
     box-shadow:2px 5px 10px;
   background: #4a4a4a;
-  color:#8a05f7;
+  color:#00ff00;
 }
 p{
     font-family: 'Concrete-Regular'
@@ -28,23 +28,25 @@ h1 {
 .btn{
   weidth: 40px;
   height: 40px;
-  background:#8A2BE2;
+  background: #00ffd8;
   border-radius:28px;
-  color:#FFE4C4;
+  color: #818080;
 }
 .btn:hover {
     height: 41px;
-    background-color: #FFE4C4;
-    color: #8A2BE2;
+    background-color: #c8ff94;
+    color: #005700;
 }
 .tovar_card {
     background:  #4a4a4a;
     color: #4dff97;
     width: 31%;
-    height: 350px;
+    height: 380px;
     box-shadow: 2px 5px 10px;
     text-align: center;
     align-items: center;
+    display: flex;
+    flex-direction: column;
     margin: 1%;
 }
 .otf{
@@ -58,4 +60,8 @@ h1 {
 }
 body{
 background:#4a4a4a;
+}
+.media2{
+    display: flex;
+    align-items: center;
 }
